19990605-20:05 EST Les. Griffith
  * some fixes to dir.c for gcc and suggestions by Victor Szel
    need replacement for non gcc supported functions ltoa() and strrev()

19990606-00:30 CET Eddie Runia
  * tests/working/hardcr.prg; tests/working/mtran.prg
    Uploaded. Matching .C untested and missing for now.
    Just wanted #100 & #101 in !

19990605-11:12 EST Les. Griffith
  * removed DIRECTORY() from files.c
  * added rtl\dir.c
  * added tests working dirtest.prg
  * changed makefile.b32 to deal with dir.c dir.obj

19990604-16:20 CET Eddie Runia
  * source/vm/initsymb.c; tests/working/run_exp.h
    CDOW/ CMONTH were missing + Removal duplicate symbols from run_exp

19990604-15:30 CET Patrick Mast
  * Release of Build #25

19990604-14:14 CET Patrick Mast
  * source/rtl/set.c
    Removed #include <sys\stat.h>
  * source/rtl/files.c
    Removed #include <sys\stat.h>
  * source/compiler/harbour.y
    Put in the build Nr.

19990604-14:24 CET Victor Szel (upload Eddie Runia)
  + source/rtl/natmsg/msghu.c
    National language message file for Hungarian

19990604-13:56 CET Thomas Braun (upload Eddie Runia)
  + source/rtl/natmsg/msgger.c
    National language message file for German

19990604-11:50 CET Eddie Runia
  * source/compiler/harbour.y
    support for the following syntax added :
    <object>:<data>[<index>] <assignment> <value>
    <object>:<method>(<param>)[<index>] <assignment> <value>

    and increment / decrement for <function>(<param>)[<index>],
      <object>:<data>[<index>] and <object>:<method>(<param>)[<index>]
  * source/rtl/natmsg/msgdut.c
      Sunday is the first day ofcourse
  + tests/working/objarr.prg
      tests for object array syntax
  * tests/working/funcarr.prg
      tests for function array syntax (inc/dec added)

19990604-23:15 EDT David G. Holm <dholm@jsd-llc.com>
  + include/version.h
    - New file to specify version info. A future revision will be
      to specify where to find the version information, so that it