@@ -14,8 +14,8 @@ PROJECT: harbour.lib libs\b16\terminal.lib libs\win16\terminal.lib harbour.exe
 harbour.lib : arrays.obj asort.obj classes.obj codebloc.obj dates.obj datesx.obj \
               debug.obj descend.obj dynsym.obj environ.obj error.obj \
               errorapi.obj errorsys.obj extend.obj files.obj \
-              initsymb.obj itemapi.obj math.obj \
-              mathx.obj objfunc.obj set.obj stringp.obj strings.obj \
+              hardcr.obj initsymb.obj itemapi.obj math.obj \
+              mathx.obj mtran.obj objfunc.obj set.obj stringp.obj strings.obj \
               stringsx.obj strcmp.obj tclass.obj transfrm.obj
 
 libs\b16\terminal.lib : console.obj
@@ -43,10 +43,12 @@ errorapi.obj : errorapi.c extend.h types.h
 errorsys.obj : errorsys.c extend.h types.h
 extend.obj   : extend.c   extend.h types.h
 files.obj    : extend.c   extend.h types.h
+hardcr.obj   : hardcr.c   extend.h types.h
 initsymb.obj : initsymb.c extend.h types.h
 itemapi.obj  : itemapi.c  extend.h types.h
 math.obj     : math.c     extend.h types.h
 mathx.obj    : mathx.c    extend.h types.h
+mtran.obj    : mtran.c    extend.h types.h
 objfunc.obj  : objfunc.c  extend.h types.h
 set.obj      : set.c      extend.h types.h
 strcmp.obj   : strcmp.c   extend.h types.h
