@@ -18,8 +18,8 @@ PROJECT: harbour.lib hbtools.lib terminal.lib libs\win16\terminal.lib harbour.ex
 harbour.lib : arrays.obj asort.obj classes.obj codebloc.obj dates.obj \
               descend.obj dynsym.obj environ.obj error.obj \
               errorapi.obj errorsys.obj extend.obj \
-              files.obj gtapi.obj initsymb.obj itemapi.obj \
-              math.obj objfunc.obj \
+              files.obj gtapi.obj hardcr.obj initsymb.obj itemapi.obj \
+              math.obj mtran.obj objfunc.obj \
               set.obj strings.obj strcmp.obj symbols.obj tclass.obj transfrm.obj
 
 hbtools.lib : datesx.obj debug.obj genobj.obj io.obj mathx.obj \
@@ -54,8 +54,10 @@ errorsys.obj : errorsys.prg extend.h types.h init.h pcode.h harbour.exe
 extend.obj   : extend.c     extend.h types.h set.h
 files.obj    : extend.c     extend.h types.h
 gtapi.obj    : gtapi.c      extend.h types.h gtapi.h
+hardcr.obj   : hardcr.c     extend.h types.h
 itemapi.obj  : itemapi.c    extend.h types.h ctoharb.h itemapi.h set.h
 math.obj     : math.c       extend.h types.h
+mtran.obj    : mtran.c      extend.h types.h
 objfunc.obj  : objfunc.prg  extend.h types.h init.h pcode.h harbour.exe
 set.obj      : set.c        extend.h types.h set.h
 strcmp.obj   : strcmp.c     extend.h types.h set.h
