@@ -13,12 +13,12 @@
 PROJECT: harbour.exe harbour.lib libs\b32\terminal.lib libs\win32\terminal.lib
 
 harbour.lib : arrays.obj asort.obj classes.obj codebloc.obj \
-              dates.obj datesx.obj msguk.obj \
-              debug.obj descend.obj dynsym.obj environ.obj error.obj \
-              errorapi.obj errorsys.obj extend.obj files.obj dir.obj \
-              initsymb.obj itemapi.obj hb_f.obj\
-              math.obj mathx.obj objfunc.obj set.obj symbols.obj strings.obj \
-              stringp.obj \
+              dates.obj datesx.obj  \
+              debug.obj descend.obj dir.obj dynsym.obj environ.obj error.obj \
+              errorapi.obj errorsys.obj extend.obj files.obj \
+              hardcr.obj hb_f.obj initsymb.obj itemapi.obj \
+              math.obj mathx.obj msguk.obj mtran.obj objfunc.obj set.obj \
+              symbols.obj strings.obj stringp.obj \
               stringsx.obj strcmp.obj tclass.obj transfrm.obj
 
 libs\b32\terminal.lib : console.obj gtapi.obj gtdos.obj
@@ -43,9 +43,9 @@ classes.obj  : classes.c  extend.h types.h
 codebloc.obj : codebloc.c extend.h types.h
 dates.obj    : dates.c    extend.h types.h
 datesx.obj   : datesx.c   extend.h types.h
-msguk.obj    : msguk.c    extend.h types.h
 debug.obj    : debug.c    extend.h types.h
 descend.obj  : descend.c  extend.h types.h
+dir.obj      : extend.c   extend.h types.h
 dynsym.obj   : dynsym.c   extend.h types.h
 environ.obj  : environ.c  extend.h types.h
 error.obj    : error.c    extend.h types.h
@@ -53,11 +53,13 @@ errorapi.obj : errorapi.c extend.h types.h
 errorsys.obj : errorsys.c extend.h types.h
 extend.obj   : extend.c   extend.h types.h
 files.obj    : extend.c   extend.h types.h
-dir.obj      : extend.c   extend.h types.h
+hardcr.obj   : hardcr.c   extend.h types.h
 initsymb.obj : initsymb.c extend.h types.h
 itemapi.obj  : itemapi.c  extend.h types.h
 math.obj     : math.c     extend.h types.h
 mathx.obj    : mathx.c    extend.h types.h
+msguk.obj    : msguk.c    extend.h types.h
+mtran.obj    : mtran.c    extend.h types.h
 objfunc.obj  : objfunc.c  extend.h types.h
 set.obj      : set.c      extend.h types.h
 strcmp.obj   : strcmp.c   extend.h types.h
